added the first blog

--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title>second git repo</title>
 </head>
 <body>
-    
+    <div class="first blog">
+        <h1>Lorem ipsum dolor sit, </h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quod laborum illum quidem officiis atque facilis, dignissimos consectetur, excepturi distinctio error deleniti quia sapiente in eaque, voluptatem repellat soluta nisi.
+     </p>
+    </div>
+     <div class="first blog" >
+        <h1>Lorem ipsum dolor sit, </h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quod laborum illum quidem officiis atque facilis, dignissimos consectetur, excepturi distinctio error deleniti quia sapiente in eaque, voluptatem repellat soluta nisi.
+     </p>
+
+     </div>
+     <div class="first blog">
+        <h1>Lorem ipsum dolor sit, </h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quod laborum illum quidem officiis atque facilis, dignissimos consectetur, excepturi distinctio error deleniti quia sapiente in eaque, voluptatem repellat soluta nisi.
+     </p>
+
+     </div>
 </body>
 </html>
