--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>second git repo</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>My Profile</title>
 </head>
 <body>
-    <div class="first blog">
-        <h1>Lorem ipsum dolor sit, </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quod laborum illum quidem officiis atque facilis, dignissimos consectetur, excepturi distinctio error deleniti quia sapiente in eaque, voluptatem repellat soluta nisi.
-     </p>
-    </div>
-     <div class="first blog" >
-        <h1>Lorem ipsum dolor sit, </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quod laborum illum quidem officiis atque facilis, dignissimos consectetur, excepturi distinctio error deleniti quia sapiente in eaque, voluptatem repellat soluta nisi.
-     </p>
-
-     </div>
-     <div class="first blog">
-        <h1>Lorem ipsum dolor sit, </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quod laborum illum quidem officiis atque facilis, dignissimos consectetur, excepturi distinctio error deleniti quia sapiente in eaque, voluptatem repellat soluta nisi.
-     </p>
-
-     </div>
+   <header> 
+      <ul>
+  <li><a href="#">table</a></li>
+  <li><a href="#">informatin</a></li>
+  <li><a href="#">team</a></li>
+</ul>
+   </header>
+   <img src="" alt="">
+   <main>
+      <section>
+   <h2>My First problem</h2>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat totam nulla ex, sunt qui perferendis aut error cum maiores provident cupiditate quas quis exercitationem porro ipsam incidunt quidem iste eum!</p>
+   <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, illo! Labore dicta fugiat natus delectus ipsum tempora quia, odio illum excepturi non, magnam sunt libero, corporis voluptas explicabo minus soluta illo rem. Veniam laborum provident magnam, eos temporibus magni blanditiis.
+   </p>
+   </section>
+   <section>
+      <h2> story  </h2>
+         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias ut saepe blanditiis tempore ducimus, reiciendis dolores voluptatibus unde tenetur eos ab nisi id laborum libero, inventore voluptatem pariatur repellat fuga.</p>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem asperiores cum ducimus, dignissimos ipsum blanditiis praesentium iste molestiae, neque nam eum optio beatae amet fugiat voluptatem hic iure earum ratione.</p>
+   
+   </section>
+   </main>
+   
 </body>
 </html>
