--- a/blog.html
+++ b/blog.html
@@ -16,10 +16,11 @@
          <li><a href="table.html">table</a></li>
          <li><a href="blog.html">blog</a></li>
          <li><a href="team.html">team</a></li>
+        <li><a href="form.html">form</a></li>
       </ul>
       </nav>
    </header>
-   <img src="" alt="">
+   <img id="myPhoto" src="fahad.jpeg" alt="my photo">
    <main>
       <section>
          <h2>My First problem</h2>
