--- a/table.html
+++ b/table.html
@@ -15,10 +15,11 @@
          <li><a href="table.html">table</a></li>
          <li><a href="blog.html">blog</a></li>
          <li><a href="team.html">team</a></li>
+         <li><a href="form.html">form</a></li>
       </ul>
       </nav>
    </header>
-   <caption>Salary Data</caption>
+  
    <table>
     <thead>
       
