--- a/team.html
+++ b/team.html
@@ -6,15 +6,49 @@
     <title>Team</title>
     <link rel="stylesheet" href="nav.css">
     <style>
-        .box {
-            display: flex;
-            background-color: cadetblue;
-            width: 600px;
-            height: 200px;
-            padding:10px;
-            margin-left: 10px;
-            justify-content: space-between;
-        }
+      
+h1{
+  text-align: center;
+  margin-top: 30px;
+  font-family: Arial, sans-serif;
+}
+
+p{
+  text-align: center;
+  font-family: Arial, sans-serif;
+  max-width: 700px;
+  margin: 10px auto;
+  line-height: 1.5;
+}
+
+
+.box{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px; 
+  margin-top: 30px;
+}
+
+
+.card{
+  background-color: #f3f3f3;
+  border-radius: 8px;
+  padding: 20px;
+  width: 200px;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  border: 1px solid #ddd;
+  transition: 0.3s;
+}
+
+
+.card:hover{
+  background-color: #e0e0e0;
+  transform: translateY(-5px);
+  cursor: pointer;
+}
+
     </style>
 </head>
 <body>
@@ -24,6 +58,7 @@
          <li><a href="table.html">table</a></li>
          <li><a href="blog.html">blog</a></li>
          <li><a href="team.html">team</a></li>
+         <li><a href="form.html">form</a></li>
       </ul>
       </nav>
    </header>
